--- a/snippets/go-cart-button.liquid
+++ b/snippets/go-cart-button.liquid
@@ -23,7 +23,9 @@
             <div class="go-cart-mini-cart__content js-go-cart-mini-cart-content">
             </div>
             <!--end go cart mini cart content-->
-
+            <div class="mini-discount">
+                <div class="docapp-coupon-input"></div>
+            </div>
             <!--go cart mini cart subtotal-->
             <div class="go-cart-mini-cart__subtotal">
                 <span>Estimated Total <span class="js-go-cart-counter-subtotal">{{- cart.item_count -}}</span>: </span>
