--- a/assets/gocart.css
+++ b/assets/gocart.css
@@ -222,6 +222,14 @@
     color: #C67A26 !important; 
   } 
 
+  .mini-discount .docapp-coupon-input .docapp-coupon-input--bean-container--bean {
+    align-items: center;
+    background-color: #fff;
+    border-radius: 0px;
+    color: #000;
+  }
+
+
   .go-cart-mini-cart__subtotal {
     align-items: center;
     height: 50px;
