--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -63,22 +63,9 @@
                     {{ cart.total_price | money_with_currency }}</span>
                    
                   </div>
-                </div>
+                </div> {% endcomment %}
 
-                <div>
-                  {% comment %} {%- if cart.cart_level_discount_applications.size > 0 -%}
-                    <ul class="discounts list-unstyled" role="list" aria-label="{{ 'customer.order.discount' | t }}">
-                      {%- for discount in cart.cart_level_discount_applications -%}
-                        <li class="discounts__discount discounts__discount--position">
-                          {%- render 'icon-discount' -%}
-                          {{ discount.title }}
-                          (-{{ discount.total_allocated_amount | money }})
-                        </li>
-                      {%- endfor -%}
-                    </ul>
-                  {%- endif -%} {% endcomment %}
-                </div>
-
+          
                 <!-- <small class="tax-note caption-large rte">
                   {%- if cart.taxes_included and shop.shipping_policy.body != blank -%}
                     {{ 'sections.cart.taxes_included_and_shipping_policy_html' | t: link: shop.shipping_policy.url }}
