--- a/assets/base.css
+++ b/assets/base.css
@@ -1081,6 +1081,7 @@ summary::-webkit-details-marker {
   .grid--peek.slider--mobile .grid__item {
     box-sizing: content-box;
     margin: 0;
+	 width: 100%;
   }
   .product--thumbnail .product__media-item:not(.is-active), .product--thumbnail_slider .product__media-item:not(.is-active) {
 	  display: none;
@@ -4606,7 +4607,7 @@ h1.product__title, .product-text h1, .product-name-mobile {
 	#otherPlugs { position: absolute; width: 100%;}
 */	
 	.pwt { background-repeat: no-repeat; min-height: 42px; background-size: contain; display: flex; align-items: center; text-align: left;  }
-	.product-warranty { background-image: url(https://cdn.shopify.com/s/files/1/0026/7229/6025/files/warranty.svg?v=1702414160; padding-left: 50px; }
+	.product-warranty { background-image: url(https://cdn.shopify.com/s/files/1/0026/7229/6025/files/warranty.svg?v=1702414160); padding-left: 50px; }
 	.product-trial { background-image: url(https://cdn.shopify.com/s/files/1/0026/7229/6025/files/one-hundred-day-trial.svg?v=1702414202); padding-left: 60px; }
 
 .size-box {
