--- a/assets/gocart.css
+++ b/assets/gocart.css
@@ -208,9 +208,23 @@
   .go-cart-mini-cart__content, .mini-discount {
     position: relative;
     height: auto;
-    overflow: hidden;
+    max-height: 200px;
+    overflow: scroll;
     overflow-y: scroll;
     padding: 0 30px;
+  }
+
+
+  .go-cart-mini-cart__content {
+    overflow: auto;
+    background:   linear-gradient(white 30%, rgba(255, 255, 255, 0)), linear-gradient(rgba(255, 255, 255, 0), white 70%) 0 100%, 
+    radial-gradient(50% 0, farthest-side, rgba(0, 0, 0, .2), rgba(0, 0, 0, 0)), radial-gradient(50% 100%, farthest-side, rgba(0, 0, 0, .2), rgba(0, 0, 0, 0)) 0 100%;
+    background:   linear-gradient(white 30%, rgba(255, 255, 255, 0)), linear-gradient(rgba(255, 255, 255, 0), white 70%) 0 100%, 
+    radial-gradient(farthest-side at 50% 0, rgba(0, 0, 0, .2), rgba(0, 0, 0, 0)), radial-gradient(farthest-side at 50% 100%, rgba(0, 0, 0, .2), rgba(0, 0, 0, 0)) 0 100%;
+    background-repeat: no-repeat;
+    background-color: white;
+    background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px;
+    background-attachment: local, local, scroll, scroll;
   }
 
   .mini-discount .docapp-coupon-input .docapp-coupon-input--input-container .docapp-coupon-input--button {
