--- a/sections/100days-page.liquid
+++ b/sections/100days-page.liquid
@@ -69,14 +69,14 @@
 <li>Tungsten Pedestal</li>
 <li>Sauna Stool</li>
 <li>Sauna Enclosure Kit</li>
-<li>EMF Shield</li>
 <li>Photon Desk Arm</li>
 <li>Photon Soft Case</li>
-<li>Outlet Tester</li>
+<li>Sauna Cover Set</li>
+<li>EMF Shield</li>
 <li>ThermaLight® Bulb</li>
 </ul>
 <p><strong>How do I make a return?</strong></p>
-<p> Email us at <a href="mailto:hello@sauna.space">hello@sauna.space</a> with your order number and the item(s) you’re returning.</p><p>*For full details, see our <a href="/policies/refund-policy">returns</a> policy.</p>
+<p> Email us at <a href="mailto:hello@sauna.space">hello@sauna.space</a> with your order number and the item(s) you’re returning.&nbsp;</p><p>*For full details, see our <a href="/pages/shipping-and-returns">shipping and returns</a> policy.</p>
 </cms cms1>
             </div>
         </div>
