--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -16,7 +16,10 @@
   else
     assign target = product
   endif
-
+assign target_id = product.selected_or_first_available_variant.id
+assign cprice = product.selected_or_first_available_variant.price
+   
+ assign title_variant = target.title
   assign compare_at_price = target.compare_at_price
   assign price = target.price | default: 1999
   assign available = target.available | default: false
@@ -29,6 +32,7 @@
     assign money_price = 'products.product.price.from_price_html' | t: price: money_price
   endif
 -%}
+{% assign cleaned_price = money_price | remove: "USD" | replace: ",", "" | split: "$" | last %}
 
 <div class="price pt-price etica
   {%- if price_class %} {{ price_class }}{% endif -%}
@@ -44,8 +48,9 @@
     {%- endcomment -%}
     <div class="price__regular">
       <span class="visually-hidden visually-hidden--inline">{{ 'products.product.price.regular_price' | t }}</span>
-      <span class="price-item price-item--regular">
-        {{ money_price }}</span>
+     <span class="campare_at_price"></span> <span data-price="{{ money_price }}" data-variant="{{ target_id }}" data-title="{{ title_variant }}" class="price-item price-item--regular 1425363">
+        {{ money_price }}
+     </span>
     </div>
     <div class="price__sale">
       {%- unless product.price_varies == false and product.compare_at_price_varies %}
